# Near-AGENT

./: .gitignore  README.md
.github/workflows/: agent-ci.yaml  agent-deploy.yaml  contract-ci.yaml
agent/: .env.development.local.example  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json
agent/config/: env.schema.ts  policy.json
agent/pages/api/: agent-account.ts  eth-account.ts  transaction.ts
agent/src/chains/: evm.ts
agent/src/core/: signAndSend.ts
agent/src/guards/: policy.ts
contracts/: Cargo.toml  README.md  build.Dockerfile
contracts/src/: lib.rs
infra/: README.md
infra/near/: README.md
infra/phala/: README.md
infra/policies/: README.md
