[package]
name = "shade-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.17.2", features = ["legacy"] }
borsh = "1.5"

[dev-dependencies]
near-sdk = { version = "5.17.2", features = ["legacy", "unit-testing"] }
borsh = "1.5"
